--- a/app.css
+++ b/app.css
@@ -9,75 +9,12 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-button{
-    cursor: pointer;
-    background: transparent;
-}
 body{
-    min-height: 100vh;
-    background: rgb(250, 250, 250);
-
-}
-.container{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-header{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh; 
+    border-bottom: 3px solid red;
 }
-header> .slider{
-    position: relative;
-}
-.slider>img{
-    max-width: 500px;
-}
-.slider-img{
-    position: absolute;
-    top: 25px;
-    right: 59px;
-}
-
-header> .login-form{
-    background: #fff;
-    width: 100%;
-    max-width: 350px;
-    padding: 10px;
-    border: 1px solid rgb(200, 200, 200);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-}
-.login-form>h1{
-    font-weight: 500;
-}
-input{
-    position: relative;
-    width: 80%;
-    padding: 10px 20px;
-    background: rgb(250, 250, 250);
-    border: 1px solid rgb(219, 219, 219);
-    font-size: 14px;
-}
-input::placeholder{
-    font-size: 13px;
-}
-.login-form>button{
-    background: #3578E5;
-    color: #fff;
-    padding: 8px 20px;
-    width: 70%;
-    border-radius: 8px;
-}
-.login-form>p{
-    letter-spacing: -3px;
-    color: grey;
-}
-.login-form>p>span{
-    margin: 0 20px;
-    letter-spacing: 1px;
+.Text{
+    color: red;
 }
